--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ light-client-js/pkg/
 light-client-js/examples/verifier-web/node_modules/
 light-client-js/examples/verifier-web/dist/
 light-client-js/examples/verifier-web/package-lock.json
+
+log
+.vscode
+.idea
