--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -28,6 +28,7 @@ serde_bytes = "0.11"
 num-traits = "0.2"
 num-derive = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
+prusti-contracts = { path = "../../prusti-dev/prusti-contracts" }
 
 [dev-dependencies]
 serde_json = "1.0"
